--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/layout/header-component.html
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/shared/components/layout/header-component.html
@@ -26,7 +26,7 @@
                       <div class="preview-dot"></div>
                     </div>
                   </div>
-                  <span class="theme-label">Light</span>
+                  <span class="theme-label">Blue Light</span>
                   <div class="theme-badge">Default</div>
                 </label>
                 
@@ -39,7 +39,7 @@
                       <div class="preview-dot"></div>
                     </div>
                   </div>
-                  <span class="theme-label">Dark</span>
+                  <span class="theme-label">Purple Dark</span>
                   <div class="theme-badge">Popular</div>
                 </label>
                 
@@ -52,7 +52,7 @@
                       <div class="preview-dot"></div>
                     </div>
                   </div>
-                  <span class="theme-label">Amber</span>
+                  <span class="theme-label">Amber Light</span>
                 </label>
                 
                 <label class="theme-option theme-dark-color" [class.active]="currentTheme === 'dark-color'">
@@ -64,7 +64,7 @@
                       <div class="preview-dot"></div>
                     </div>
                   </div>
-                  <span class="theme-label">Neon</span>
+                  <span class="theme-label">Green Dark</span>
                   <div class="theme-badge accent">New</div>
                 </label>
                 
@@ -77,7 +77,7 @@
                       <div class="preview-dot"></div>
                     </div>
                   </div>
-                  <span class="theme-label">Rainbow</span>
+                  <span class="theme-label">Gradient Dark</span>
                   <div class="theme-badge warning">Fun</div>
                 </label>
               </div>
